# gentle_socket_io

./: README.md  pyproject.toml
gentle_socket_io/: GentleProfile.py  GentleSocket.py  __init__.py
gentle_socket_io.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
